k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 8000
