k8s/ingress-service.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5001
     - http:
         paths:
           - path: /
             pathType: Prefix
             backend:
                service:
                  name: client-cluster-ip-service
                  port:
                    number: 3007
